name:                yak
version:             0.1.0.0
synopsis:            A strongly typed IRC library
description:         See README.rst
homepage:            https://github.com/tsahyt/yak#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/yak
