name:                yak
version:             0.1.0.0
synopsis:            A strongly typed IRC library
description:         See README.rst
homepage:            https://github.com/tsahyt/yak#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Yak
                       Network.Yak.Client
                       Network.Yak.Capabilities
                       Network.Yak.Responses
                       Network.Yak.Types
                       Network.Yak.TH
  build-depends:       base >= 4.7 && < 5,
                       text,
                       bytestring,
                       lens,
                       attoparsec,
                       template-haskell,
                       time
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite yak-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       yak,
                       hspec,
                       bytestring
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
